[RC] 代码规范